--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,38 +1,76 @@
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap");
 
-html,
-body,
-#root,
+
+
+/* font-family: 'Inter', sans-serif;
+font-family: 'Montserrat', sans-serif;
+font-family: 'Quicksand', sans-serif;
+font-family: 'Roboto', sans-serif;
+font-family: 'Roboto Condensed', sans-serif; 
+font-family: 'Rubik', sans-serif;
+*/
+
+
 .app {
   height: 100%;
   width: 100%;
-  font-family: "Rubik", sans-serif;
+  font-family: "Quicksand", sans-serif !important;
 }
+
+/* DARK MODE */
 
 .css-16vbkgj-MuiTypography-root {
-  color: #d82460 !important;
+  color: #f6e096 !important;
 }
+
+.css-18l7mx6-MuiButtonBase-root-MuiButton-root.Mui-disabled {
+  background-color: #00D5FA !important;
+  color: #f6e096 !important;
+}
+
+.css-155c1kw-MuiInputBase-root {
+  width: auto !important;
+  color: #f6e096 !important;
+}
+
+/* LIGHT MODE */
 
 .css-12a2lu5-MuiTypography-root {
-  color: #d82460!important;
+  color: #4f60f9!important;
 }
 
+.css-3494nj-MuiButtonBase-root-MuiButton-root.Mui-disabled {
+  background-color: #00D5FA !important;
+  color: #f6e096 !important;
+}
+
+.css-1mb3v9h-MuiInputBase-root {
+  width: auto !important;
+  color: #4f60f9 !important;
+}
+
+/* BOTH */
+
 .MuiButtonBase-root {
-  color: #d82460!important;
+  color: #1aa8f5!important;
 
 }
 
 .MuiButton-root {
   color: #00D5FA !important;
-  background-color: #d82460 !important;
+  background-color: #f6e096 !important;
 }
 
-.css-18l7mx6-MuiButtonBase-root-MuiButton-root.Mui-disabled {
-  background-color: #00D5FA !important;
-  color: #d82460 !important;
+.css-havevq-MuiSvgIcon-root {
+  color: #4f60f9 !important;
 }
 
-.css-3494nj-MuiButtonBase-root-MuiButton-root.Mui-disabled {
-  background-color: #00D5FA !important;
-  color: #d82460 !important;
-}
+.slide {
+  text-align: left !important;
+
+} 
+
+
+
+
+
