installed nodemon on p.json serverside for deployment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,10 +38,12 @@ font-family: 'Rubik', sans-serif;
   color: #008690 !important;
 }
 
+.css-1s9dlqc-MuiTypography-root {
+  color: #ff6e5e !important;
+  font-family: 'Montserrat', sans-serif !important;
+}
+
 /* LIGHT MODE */
-
-
-
 /* .css-poa6bm-MuiButtonBase-root {
   color: #008690 !important;
 } */
